# camera_engine_rkaiq

./: Android.bp  CMakeLists.txt  RkAiqManager.cpp  RkAiqManager.h  RkAiqVersion.h
aiq_core/: RkAiqCore.cpp  RkAiqCore.h  RkAiqCoreV21.cpp  RkAiqCoreV21.h  RkAiqHandle.cpp  RkAiqHandle.h  RkAiqHandleInt.cpp  RkAiqHandleInt.h  RkAiqHandleIntV21.cpp  RkAiqHandleIntV21.h  RkLumaCore.cpp  RkLumaCore.h
algos/: Android.bp  CMakeLists.txt  rk_aiq_algo_types.h  rk_aiq_algo_types_int.h
algos/a3dlut/: rk_aiq_a3dlut_algo.cpp  rk_aiq_algo_a3dlut_itf.cpp  rk_aiq_algo_a3dlut_itf.h  rk_aiq_types_a3dlut_algo_prvt.h
algos/ablc/: rk_aiq_ablc_algo.cpp  rk_aiq_algo_ablc_itf.cpp  rk_aiq_types_ablc_algo_prvt.h
algos/accm/: rk_aiq_accm_algo.cpp  rk_aiq_accm_algo.h  rk_aiq_algo_accm_itf.cpp  rk_aiq_algo_accm_itf.h  rk_aiq_types_accm_algo_prvt.h  rk_aiq_uapi_accm_int.cpp
algos/acnr/: rk_aiq_acnr_algo_cnr_v1.cpp  rk_aiq_acnr_algo_cnr_v1.h  rk_aiq_acnr_algo_itf_v1.cpp  rk_aiq_acnr_algo_v1.cpp  rk_aiq_acnr_algo_v1.h  rk_aiq_algo_acnr_itf.cpp  rk_aiq_algo_acnr_itf.h  rk_aiq_types_acnr_algo_prvt_v1.h  rk_aiq_uapi_acnr_int_v1.cpp
algos/acp/: rk_aiq_algo_acp_itf.cpp
algos/adebayer/: rk_aiq_algo_adebayer.cpp  rk_aiq_algo_adebayer_itf.cpp  rk_aiq_types_algo_adebayer_prvt.h
algos/adehaze/: rk_aiq_adehaze_algo.cpp  rk_aiq_adehaze_algo.h  rk_aiq_algo_adhaz_itf.cpp  rk_aiq_types_adehaze_algo_prvt.h
algos/adpcc/: rk_aiq_adpcc_algo.cpp  rk_aiq_adpcc_algo.h  rk_aiq_algo_adpcc_itf.cpp  rk_aiq_types_adpcc_algo_prvt.h
algos/adrc/: rk_aiq_adrc_algo.cpp  rk_aiq_adrc_algo.h  rk_aiq_algo_adrc_itf.cpp  rk_aiq_types_adrc_algo_prvt.h
algos/ae/: rk_aiq_algo_ae_itf.h
algos/afec/: fec_algo.cpp  rk_aiq_algo_afec_itf.cpp  rk_aiq_types_afec_algo_prvt.h  rk_aiq_uapi_afec_int.cpp
algos/agamma/: rk_aiq_algo_agamma_itf.cpp  rk_aiq_types_agamma_algo_prvt.h
algos/agic/: rk_aiq_algo_agic.cpp  rk_aiq_algo_agic_itf.cpp  rk_aiq_types_algo_agic_prvt.h  rk_aiq_uapi_agic_int.cpp
algos/ahdr/: rk_aiq_ahdr_algo.cpp  rk_aiq_ahdr_algo.h  rk_aiq_ahdr_algo_merge.cpp  rk_aiq_ahdr_algo_tmo.cpp  rk_aiq_algo_ahdr_itf.cpp  rk_aiq_types_ahdr_algo_prvt.h  rk_aiq_uapi_ahdr_int.cpp
algos/aie/: rk_aiq_algo_aie_itf.cpp
algos/aldch/: rk_aiq_algo_aldch_itf.cpp
algos/alsc/: rk_aiq_algo_alsc_itf.cpp  rk_aiq_algo_alsc_itf.h  rk_aiq_alsc_algo.cpp  rk_aiq_types_alsc_algo_prvt.h
algos/amfnr/: rk_aiq_algo_amfnr_itf.cpp  rk_aiq_algo_amfnr_itf.h
algos/anr/: rk_aiq_algo_anr_itf.cpp  rk_aiq_anr_algo.cpp  rk_aiq_anr_algo_bayernr.cpp  rk_aiq_anr_algo_bayernr.h  rk_aiq_anr_algo_gain.cpp  rk_aiq_anr_algo_mfnr.cpp  rk_aiq_anr_algo_mfnr.h  rk_aiq_anr_algo_uvnr.cpp  rk_aiq_anr_algo_uvnr.h  rk_aiq_anr_algo_ynr.cpp  rk_aiq_anr_algo_ynr.h  rk_aiq_types_anr_algo_prvt.h  rk_aiq_uapi_anr_int.cpp
algos/arawnr/: .rk_aiq_algo_acnr_itf.cpp.swp  rk_aiq_algo_arawnr_itf.cpp  rk_aiq_algo_arawnr_itf.h
algos/arawnr2/: rk_aiq_abayernr_algo_bayernr_v2.cpp  rk_aiq_abayernr_algo_bayernr_v2.h  rk_aiq_abayernr_algo_itf_v2.cpp  rk_aiq_abayernr_algo_v2.cpp  rk_aiq_abayernr_algo_v2.h  rk_aiq_types_abayernr_algo_prvt_v2.h  rk_aiq_uapi_abayernr_int_v2.cpp
algos/asharp/: rk_aiq_algo_asharp_itf.cpp  rk_aiq_asharp_algo.cpp  rk_aiq_asharp_algo.h  rk_aiq_asharp_algo_edgefilter.cpp  rk_aiq_asharp_algo_edgefilter.h  rk_aiq_asharp_algo_sharp.cpp  rk_aiq_asharp_algo_sharp.h  rk_aiq_types_asharp_algo_prvt.h  rk_aiq_uapi_asharp_int.cpp
algos/asharp3/: rk_aiq_asharp_algo_itf_v3.cpp  rk_aiq_asharp_algo_sharp_v3.cpp  rk_aiq_asharp_algo_sharp_v3.h  rk_aiq_asharp_algo_v3.cpp  rk_aiq_asharp_algo_v3.h  rk_aiq_types_asharp_algo_prvt_v3.h  rk_aiq_uapi_asharp_int_v3.cpp
algos/awb/: rk_aiq_algo_awb_itf.h  rk_aiq_awb_algo_v200.h
algos/aynr/: rk_aiq_algo_aynr_itf.cpp  rk_aiq_algo_aynr_itf.h
algos/aynr2/: rk_aiq_aynr_algo_itf_v2.cpp  rk_aiq_aynr_algo_v2.cpp  rk_aiq_aynr_algo_ynr_v2.cpp  rk_aiq_aynr_algo_ynr_v2.h  rk_aiq_types_aynr_algo_prvt_v2.h  rk_aiq_uapi_aynr_int_v2.cpp
common/: list.h  rk_aiq_pool.h  rk_aiq_types_priv.h  shared_item_pool.cpp  shared_item_pool.h
common/gen_mesh/: RkGenMeshVersion.h  genMesh.cpp  main.cpp
common/linux/: videodev2.h
hal_interface2.0/interface/: AiqCameraHalAdapter.cpp  AiqCameraHalAdapter.h  Android.mk  rkisp_control_loop_impl.cpp  settings_processor.cpp
hal_interface2.0/rkaiq_3A_server/: Android.mk  rkisp_3A_server.cpp
hwi/: CamHwBase.cpp  CamHwBase.h  CamHwInfo.cpp  ICamHw.h  LensHw.cpp  LensHw.h  SensorHw.cpp  SensorHw.h
hwi/isp20/: CamHwIsp20.cpp  CamHwIsp20.h  Isp20OfflineFrmRead.cpp  Isp20OfflineFrmRead.h  Isp20Params.cpp  Isp20Params.h  (+7 more)
iq_parser/: RkAiqCalibApi.cpp  RkAiqCalibDb.cpp  RkAiqCalibDb.h  RkAiqCalibParser.cpp  RkAiqCalibParser.h  RkAiqCalibTag.cpp  RkAiqCalibTag.h  RkAiqCalibVersion.h  calibtags.h  tinyxml2.cpp  tinyxml2.h
iqfiles/: gc2385_HS5885-BNSM1018-V01_default.xml  gc8034_RK-CMK-8M-2-v1_CK8401.xml  imx347_JSD3425-C1_40IRC_normal.xml  imx415_YT10092_IR0147-28IRC-8M-F20-hdr3.xml  imx415_YT10092_IR0147-28IRC-8M-F20.xml  imx415_YT10092_IR0147-36IRC-8M-F20-hdr3.xml  imx415_YT10092_IR0147-36IRC-8M-F20.xml  imx415_YT10092_IR0147-50IRC-8M-F20.xml  imx415_YT10092_IR0147-60IRC-8M-F20-hdr3.xml  imx415_YT10092_IR0147-60IRC-8M-F20.xml  os04a10_CMK-OT1607-FV1_M12-40IRC-4MP-F16.xml  os04a10_CMK-OT1607-FV1_M12-60IRC-4MP-F16.xml  ov2718_YT-RV1109-3-V1_M43-4IR-2MP-F2_normal.xml  s5kgm1sp_PCORW0009A_4mm-4M.xml
rkisp2x_tuner/: rkisp2x_tuner_version.txt
uAPI/: rk_aiq_user_api_a3dlut.cpp  rk_aiq_user_api_ablc.cpp  rk_aiq_user_api_accm.cpp  rk_aiq_user_api_acp.cpp  rk_aiq_user_api_adebayer.cpp  rk_aiq_user_api_adehaze.cpp  rk_aiq_user_api_adpcc.cpp  rk_aiq_user_api_ae.cpp  rk_aiq_user_api_af.cpp  rk_aiq_user_api_afec.cpp  rk_aiq_user_api_agamma.cpp  rk_aiq_user_api_agic.cpp  rk_aiq_user_api_ahdr.cpp  rk_aiq_user_api_aldch.cpp  rk_aiq_user_api_alsc.cpp  rk_aiq_user_api_anr.cpp  rk_aiq_user_api_asd.cpp  rk_aiq_user_api_asharp.cpp  rk_aiq_user_api_awb.cpp  rk_aiq_user_api_imgproc.cpp  rk_aiq_user_api_sysctl.cpp
xcore/: poll_thread.cpp  poll_thread.h  v4l2_buffer_proxy.h  v4l2_device.cpp  v4l2_device.h  xcam_log.cpp  xcam_thread.cpp
(+44 files in other folders)
